# booster_robotics_sdk

./: .gitignore  CMakeLists.txt  robot_fixed.urdf  test_robot_publisher.launch.py
example/: check_joint.py  gripper_control.py
example/high_level/: b1_7dof_arm_sdk_example.cpp  b1_7dof_arm_sdk_example.py  b1_arm_sdk_example.cpp  b1_head_sdk_example.cpp  b1_loco_example_client.py  b1_upper_body_custom_control.cpp  move_robot_bridge.cpp  move_robot_gripper.py  move_robot_ipc.h  move_robot_node.cpp  move_robot_ros_node.cpp  read_head_state.py  set_custom_mode.py
example/implemented_controllers/: arm_controller.py  arm_controller_sim.py  head_controller.py  joints_const.py  low_level_publisher.py  lower_arm.py  lower_arm_sim.py  mapping_pos.py  nav_controller.py  odometer_example.py  remote_control_service.py
example/low_level/: low_level_subscriber.py
include/booster/robot/b1/: b1_loco_api.hpp  b1_loco_client.hpp
include/booster/robot/common/: robot_shared.hpp
launch/: T1_fixed.urdf  display_booster_t1.launch.py  dummy_joint_publisher.py  real_joint_publisher.py
python/: binding.cpp
rviz/: booster_t1.rviz
scripts/: b1_upper_body_custom_control.py  go_to_zero.py  gripper_control_node.py  head_control_node.py  move_hand_ee_demo.py  move_robot_node.py  pretty_joint_states_13_14_15.py  republish.py  rotate_head_node.py  tmux_robot_control.sh
urdf/: T1_fixed.urdf
